app: Navigation 3 with Grid, Compare and scoring screens; v0.2.0
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NAmSfMG3LfdCw9DC5pxByG